# AppAlchemist

./: .gitignore  AGENTS.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_ARCH.md  LICENSE  README.md  SECURITY.md  test-krita.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  conversion_failure.yml  feature_request.yml
.github/workflows/: build-arm64.yml
assets/: compatibility_rules.json
docs/: ai-agent-roadmap.md  gtk4-libadwaita-ui-plan.md  regression-corpus.json  regression-corpus.md  supported-packages.md  usage-cli.md  usage-gui.md
docs/assets/: README.md
frontend/gtk/: README.md  app.cpp  app.h  app_window.cpp  app_window.h  main.cpp  style.css
include/: app_card_widget.h  app_details_dialog.h  appdetector.h  appdirbuilder.h  appimagebuilder.h  appmainwindow.h  appstore_model.h  appstore_window.h  appstream_metadata.h  cache_manager.h  cli_converter.h  compatibility_rules.h  conversion_controller.h  debparser.h  debtoappimagepipeline.h  dependency_resolver.h  dependencyanalyzer.h  package_extractor.h  package_inspector.h  package_packager.h  package_profile.h  packagetoappimagepipeline.h  repository_browser.h  repository_search_worker.h  rpmparser.h  runtime_probe.h  search_dialog.h  size_optimizer.h  tarballparser.h  utils.h
include/store/: name_trace.h  store_app_card.h  store_appentry.h  store_cache.h  store_details_dialog.h  store_indexer.h  store_ratings.h  store_repository.h  store_viewmodel.h
packaging/: BUILD_ALL.md  BUILD_ARM64.md  Dockerfile.arm64  ICON_SETUP.md  QUICK_START.md  README.md  README_ARM64_BUILD.txt  SAVE_ICON.md  appalchemist-deb-handler.desktop  appalchemist-rpm-handler.desktop  appalchemist.desktop  appalchemist.spec  build-appimage-arm64.sh  build-appimage.sh  build-deb.sh  build-rpm.sh
packaging/arch/: PKGBUILD  appalchemist-1.0.0-1-x86_64.pkg.tar.zst  build-arch.sh
packaging/arch/usr/share/applications/: appalchemist.desktop
packaging/debian/: appalchemist.desktop  changelog  compat  control  rules
packaging/mime/: deb-package.xml  rpm-package.xml
src/: app_card_widget.cpp  app_details_dialog.cpp  appdetector.cpp  appdirbuilder.cpp  appimagebuilder.cpp  appmainwindow.cpp  appstore_model.cpp  appstore_window.cpp  appstream_metadata.cpp  cache_manager.cpp  cli_converter.cpp  compatibility_rules.cpp  conversion_controller.cpp  debparser.cpp  debtoappimagepipeline.cpp  dependency_resolver.cpp  dependencyanalyzer.cpp  main.cpp  package_extractor.cpp  package_inspector.cpp  package_packager.cpp  package_profile.cpp  packagetoappimagepipeline.cpp  repository_browser.cpp  repository_search_worker.cpp  rpmparser.cpp  runtime_probe.cpp  search_dialog.cpp  size_optimizer.cpp  tarballparser.cpp  utils.cpp
src/store/: store_app_card.cpp  store_cache.cpp  store_details_dialog.cpp  store_indexer.cpp  store_ratings.cpp  store_repository.cpp  store_viewmodel.cpp
ui/: appmainwindow.ui
